fix(decisions): resolve PR 157 review findings